# kml_publisher

./: README.md  package.xml  setup.cfg  setup.py
kml_publisher/: kml_publisher.py
kml_publisher/kml/: template.kml
